tests/golden/phase4a/compile-pass/closure_block_typed.rua
fn main() -> i64 {
    let increment = |value: i64| -> i64 {
        value + 1
    };
    increment(41)
}
