tests/golden/phase4a/compile-fail/closure_escape_unsupported.rua
fn main() {
    let escaped = |value: i64| value + 1;
}
